# task_master

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  main.cpp
cmake/: GeneralOptions.cmake
configs/: config.yaml  config.yml
logging/: Logger.cpp  Logger.h  Strategy.cpp  Strategy.h  helpers.cpp  helpers.h
utils/: CMakeLists.txt  utils.h
utils/parser/: CMakeLists.txt  ConfigParser.cpp  ConfigParser.h
